--- a/ros2_ws/Dockerfile
+++ b/ros2_ws/Dockerfile
@@ -94,6 +94,9 @@ RUN echo "session required pam_limits.so" | tee --append /etc/pam.d/common-sessi
 # enable colorized output from ros logging
 RUN echo "export RCUTILS_COLORIZED_OUTPUT=1" >> ${HOME}/.bashrc
 
+# FIXME(#76): Remove once dependencies are fixed again
+RUN add-apt-repository ppa:kisak/kisak-mesa && apt update && apt upgrade -y && rm -rf /var/lib/apt/lists/*
+
 
 FROM environment-variables as final
 COPY --from=base-workspace / /
