--- a/ros2_control/Dockerfile.humble
+++ b/ros2_control/Dockerfile.humble
@@ -1,4 +1,4 @@
-ARG BASE_IMAGE=ghcr.io/aica-technology/ros2-modulo
+ARG BASE_IMAGE=ghcr.io/aica-technology/ros2-ws
 ARG BASE_TAG=humble
 FROM ${BASE_IMAGE}:${BASE_TAG} as ros2-control-build
 
@@ -19,6 +19,7 @@ RUN git clone -b ros2 --depth 1 https://github.com/ros-drivers/ackermann_msgs.gi
 
 WORKDIR ${ROS2_WORKSPACE}
 RUN /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash; colcon build"
+RUN rm -rf ./src
 
 
 FROM ${BASE_IMAGE}:${BASE_TAG} as final
