Enable builds with iron base images (#88)
* Enable builds with iron base images

* Add iron Dockerfile

* Shorten logic

* Rebase

--- a/.github/workflows/reusable-build-push.yml
+++ b/.github/workflows/reusable-build-push.yml
@@ -59,14 +59,12 @@ jobs:
           BUILD_FLAGS=()
           # parse base tag     
           BASE_TAG=${{ inputs.base_tag }}
-          if [[ "${BASE_TAG}" == *"noetic"* ]]; then
+          if [[ "${BASE_TAG}" == *"noetic"* || "${BASE_TAG}" == *"galactic"* ]]; then
             UBUNTU_VERSION=focal-fossa
-          elif [[ "${BASE_TAG}" == *"galactic"* ]]; then
-            UBUNTU_VERSION=focal-fossa
-          elif [[ "${BASE_TAG}" == *"humble"* ]]; then
+          elif [[ "${BASE_TAG}" == *"humble"* || "${BASE_TAG}" == *"iron"* ]]; then
             UBUNTU_VERSION=jammy-jellyfish
           else
-            echo "::error::Invalid base tag. Base tag needs to contain either 'noetic', 'galactic' or 'humble'."
+            echo "::error::Invalid base tag. Base tag needs to contain either 'noetic', 'galactic', 'humble' or 'iron'."
             exit 1
           fi
           BUILD_FLAGS+=(--build-arg BASE_TAG=${BASE_TAG})
