--- a/.github/workflows/reusable-build-push.yml
+++ b/.github/workflows/reusable-build-push.yml
@@ -13,36 +13,16 @@ on:
       output_tag:
         required: false
         type: string
-      cl_branch:
-        required: false
-        type: string
-        default: 'main'
-      modulo_branch:
-        required: false
-        type: string
-        default: 'main'
       dockerfile_extension:
         required: false
         type: string
-      platforms:
-        required: false
-        type: string
-        default: 'linux/amd64,linux/arm64'
-      write_hashes:
-        required: false
-        type: string
-        default: 'true'
     secrets:
       token:
         description: 'The GitHub token passed from the caller workflow'
         required: true
 
-env:
-  CI_BRANCH: 'ci'
-  ARTI_NAME: 'artifact'
-
 jobs:
-  parse-inputs:
+  metadata:
     runs-on: ubuntu-latest
     name: Parse inputs
     outputs:
@@ -51,7 +31,6 @@ jobs:
       path: ${{ steps.parse.outputs.path }}
       file: ${{ steps.parse.outputs.file }}
       build_flags: ${{ steps.parse.outputs.build_flags }}
-      ci_branch: ${{ steps.parse.outputs.ci_branch }}
     steps:
       - name: Parse inputs
         id: parse
@@ -59,16 +38,7 @@ jobs:
           BUILD_FLAGS=()
           # parse base tag     
           BASE_TAG=${{ inputs.base_tag }}
-          if [[ "${BASE_TAG}" == *"noetic"* || "${BASE_TAG}" == *"galactic"* ]]; then
-            UBUNTU_VERSION=focal-fossa
-          elif [[ "${BASE_TAG}" == *"humble"* || "${BASE_TAG}" == *"iron"* ]]; then
-            UBUNTU_VERSION=jammy-jellyfish
-          else
-            echo "::error::Invalid base tag. Base tag needs to contain either 'noetic', 'galactic', 'humble' or 'iron'."
-            exit 1
-          fi
           BUILD_FLAGS+=(--build-arg BASE_TAG=${BASE_TAG})
-          BUILD_FLAGS+=(--build-arg UBUNTU_VERSION=${UBUNTU_VERSION})
           echo "::debug::Using base image tag ${BASE_TAG}"
           # parse output tag
           OUTPUT_TAG=${{ inputs.output_tag }}
@@ -90,112 +60,47 @@ jobs:
           echo "path=${WS_PATH}" >> $GITHUB_OUTPUT
           FILE=${WS_PATH}/Dockerfile${{ inputs.dockerfile_extension }}
           echo "file=${FILE}" >> $GITHUB_OUTPUT
-          
-          # add branches to build flags
-          BUILD_FLAGS+=(--build-arg CL_BRANCH=${{ inputs.cl_branch }})
-          BUILD_FLAGS+=(--build-arg MODULO_BRANCH=${{ inputs.modulo_branch }})
+
           echo "build_flags=${BUILD_FLAGS[@]}" >> $GITHUB_OUTPUT
-          
-          # convert env to output
-          echo "ci_branch=${{ env.CI_BRANCH }}" >> $GITHUB_OUTPUT
 
-  prepare-workspace:
-    needs: parse-inputs
-    runs-on: ubuntu-latest
-    name: Prepare workspace
-    outputs:
-      artifact_name: ${{ steps.prepare.outputs.artifact_name }}
-      artifact_path: ${{ steps.prepare.outputs.artifact_path }}
+  build:
+    needs: metadata
+    strategy:
+      matrix:
+        arch: [ amd64, arm64 ]
+        include:
+          - image: ubuntu-latest
+          - image: buildjet-2vcpu-ubuntu-2204-arm
+            arch: arm64
+
+    runs-on: ${{ matrix.image }}
+    name: Build and publish (${{ matrix.arch }})
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Prepare workspace
-        id: prepare
-        if: needs.parse-inputs.outputs.path == 'ros2_ws' || needs.parse-inputs.outputs.path == 'ros_ws'
+      - if: needs.metadata.outputs.path == 'ros2_ws' || needs.metadata.outputs.path == 'ros_ws'
         run: |
-          CONFIG_PATH=${{ needs.parse-inputs.outputs.path }}/config
+          CONFIG_PATH=${{ needs.metadata.outputs.path }}/config
           mkdir -p ${CONFIG_PATH}
           cp common/sshd_entrypoint.sh ${CONFIG_PATH}/
-          echo "artifact_name=${{ env.ARTI_NAME }}" >> $GITHUB_OUTPUT
-          echo "artifact_path=${CONFIG_PATH}" >> $GITHUB_OUTPUT
-        shell: bash
-
-      - name: Upload artifacts
-        if: needs.parse-inputs.outputs.path == 'ros2_ws' || needs.parse-inputs.outputs.path == 'ros_ws'
-        uses: actions/upload-artifact@v3
+      
+      - uses: aica-technology/.github/.github/actions/ghcr-build@v0.6.1
         with:
-          name: ${{ steps.prepare.outputs.artifact_name }}
-          path: ${{ steps.prepare.outputs.artifact_path }}
-          retention-days: 1
-
-  build-push:
-    needs: [ parse-inputs, prepare-workspace ]
-    name: Build and push
-    uses: aica-technology/.github/.github/workflows/build-push-multi-arch.yml@v0.1
-    with:
-      image_name: ${{ needs.parse-inputs.outputs.image_name }}
-      image_tags: ${{ needs.parse-inputs.outputs.output_tag }}
-      platforms: ${{ inputs.platforms }}
-      build_context_path: ${{ needs.parse-inputs.outputs.path }}
-      dockerfile_path: ${{ needs.parse-inputs.outputs.file }}
-      build_flags: ${{ needs.parse-inputs.outputs.build_flags }}
-      artifact_name: ${{ needs.prepare-workspace.outputs.artifact_name }}
-      artifact_path: ${{ needs.prepare-workspace.outputs.artifact_path }}
-    secrets:
-      token: ${{ secrets.GITHUB_TOKEN }}
-
-  write-image-hash:
-    needs: [ parse-inputs, build-push ]
-    if: inputs.write_hashes == 'true'
-    name: Write image hash
-    uses: aica-technology/.github/.github/workflows/write-file.yml@v0.1
-    with:
-      content: ${{ needs.build-push.outputs.image_hash }}
-      filepath: ./${{ needs.parse-inputs.outputs.path }}/${{ needs.parse-inputs.outputs.output_tag }}-hash
-      branch: ${{ needs.parse-inputs.outputs.ci_branch }}
-
-  get-dependency-hash:
-    needs: [ write-image-hash ]
-    if: inputs.workspace == 'ros2-control-libraries' || inputs.workspace == 'ros2-modulo-control'
+          image_name: ${{ needs.metadata.outputs.image_name }}
+          image_tags: ${{ needs.metadata.outputs.output_tag }}-${{ matrix.arch }}
+          build_context_path: ${{ needs.metadata.outputs.path }}
+          dockerfile_path: ${{ needs.metadata.outputs.file }}
+          build_flags: ${{ needs.metadata.outputs.build_flags }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+  
+  multi-arch:
     runs-on: ubuntu-latest
-    name: Get hash of installed library
-    outputs:
-      hash: ${{ steps.get-hash.outputs.hash }}
-      hash_filename: ${{ steps.get-hash.outputs.hash_filename }}
+    name: Merge into a multi-arch image
+    needs: [ metadata, build ]
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: aica-technology/.github/.github/actions/ghcr-manifest-merge@v0.6.1
         with:
-          ref: ${{ env.CI_BRANCH }}
-
-      - name: Get hash
-        id: get-hash
-        run: |
-          HASH=""
-          HASH_FILENAME=""
-          if [[ "${{ inputs.workspace }}" == "ros2-control-libraries" ]]; then
-            BRANCH=${{ inputs.cl_branch }}
-            HASH_FILENAME="./control-libraries-${BRANCH}-hash"
-            HASH=$(git ls-remote https://github.com/aica-technology/control-libraries.git ${BRANCH} | awk '{ print $1 }')
-          elif [[ "${{ inputs.workspace }}" == "ros2-modulo-control" ]]; then
-            BRANCH=${{ inputs.modulo_branch }}
-            HASH_FILENAME="./modulo-${BRANCH}-hash"
-            HASH=$(git ls-remote https://github.com/aica-technology/modulo.git ${BRANCH} | awk '{ print $1 }')
-          fi
-          OLD_HASH=$(cat ${HASH_FILENAME} || echo '')
-          if [ "${OLD_HASH}" != "${HASH}" ]; then
-            echo "hash_filename=${HASH_FILENAME}" >> $GITHUB_OUTPUT
-            echo "hash=${HASH}" >> $GITHUB_OUTPUT
-          fi
-        shell: bash
-
-  write-dependency-hash:
-    needs: [ parse-inputs, get-dependency-hash ]
-    if: needs.get-dependency-hash.outputs.hash
-    name: Write dependency hash
-    uses: aica-technology/.github/.github/workflows/write-file.yml@v0.1
-    with:
-      content: ${{ needs.get-dependency-hash.outputs.hash }}
-      filepath: ${{ needs.get-dependency-hash.outputs.hash_filename }}
-      branch: ${{ needs.parse-inputs.outputs.ci_branch }}
+          image_name: ${{ needs.metadata.outputs.image_name }}
+          image_tags: ${{ needs.metadata.outputs.output_tag }}
+          archs: amd64,arm64
+          token: ${{ secrets.GITHUB_TOKEN }}
