--- a/ros2_ws/Dockerfile
+++ b/ros2_ws/Dockerfile
@@ -1,4 +1,4 @@
-ARG BASE_TAG=humble
+ARG BASE_TAG=iron
 FROM ros:${BASE_TAG} as environment-variables
 ENV DEBIAN_FRONTEND=noninteractive
 ENV PYTHONWARNINGS=ignore:::setuptools.command.install,ignore:::setuptools.command.easy_install,ignore:::pkg_resources
@@ -99,10 +99,42 @@ USER root
 RUN mkdir /root/.ssh/ && ssh-keyscan github.com | tee -a /root/.ssh/known_hosts
 RUN echo "session required pam_limits.so" | tee --append /etc/pam.d/common-session > /dev/null
 
+FROM base-workspace as ros2-control-iron
+
+RUN apt-get update && apt-get install --no-install-recommends -y \
+  doxygen \
+  librange-v3-dev \
+  python3-jinja2 \
+  python3-typeguard \
+  && rm -rf /var/lib/apt/lists/*
+
+WORKDIR ${ROS2_WORKSPACE}/src
+
+RUN git clone -b 3.18.0 --depth 1 https://github.com/ros-controls/ros2_control.git
+RUN git clone -b 3.14.0 --depth 1 https://github.com/ros-controls/ros2_controllers.git
+# get additional interface dependencies manually
+RUN git clone -b 5.0.0 --depth 1 https://github.com/ros-controls/control_msgs.git
+RUN git clone -b 1.0.2 --depth 1 https://github.com/pal-robotics/backward_ros.git
+RUN git clone -b 3.1.2 --depth 1 https://github.com/ros/diagnostics.git
+RUN git clone -b 2.5.0 --depth 1 https://github.com/ros-controls/realtime_tools.git
+RUN git clone -b 1.7.0 --depth 1 https://github.com/ros2/rcl_interfaces.git
+RUN git clone -b 0.11.0 --depth 1 https://github.com/ros2/test_interface_files.git
+RUN git clone -b 1.16.0 --depth 1 https://github.com/ros/angles.git
+RUN git clone -b ros2 --depth 1 https://github.com/ros-drivers/ackermann_msgs.git
+RUN git clone -b 0.3.3 --depth 1 https://github.com/PickNikRobotics/generate_parameter_library.git
+RUN git clone -b 0.2.2 --depth 1 https://github.com/PickNikRobotics/RSL.git
+RUN git clone -b 1.0.2 --depth 1 https://github.com/PickNikRobotics/cpp_polyfills.git
+RUN git clone -b 3.1.0 --depth 1 https://github.com/ros-controls/control_toolbox.git
+RUN git clone -b 0.1.0 --depth 1 https://github.com/ros-controls/kinematics_interface.git
+
+WORKDIR ${ROS2_WORKSPACE}
+RUN /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash; colcon build"
+RUN rm -rf ./src
+
+FROM ros2-control-${BASE_TAG} as ros2-control
 
 FROM environment-variables as final
-COPY --from=base-workspace / /
+COPY --from=ros2-control / /
 
 # start as ROS user
 USER ${USER}
-WORKDIR ${ROS2_WORKSPACE}
