update generated tags
Co-authored-by: Louis Brunner <LouisBrunner@users.noreply.github.com>

--- a/.github/workflows/reusable-build-push.yml
+++ b/.github/workflows/reusable-build-push.yml
@@ -74,7 +74,7 @@ jobs:
           echo "build_flags=${BUILD_FLAGS[@]}" >> $GITHUB_OUTPUT
 
           VERSION_TAG="v${{ needs.check-version.outputs.version }}"
-          IMAGE_TAGS="${{ inputs.ros_distro}}-${VERSION_TAG}","${{ inputs.ros_distro}}"
+          IMAGE_TAGS="${VERSION_TAG},${VERSION_TAG}-${{ inputs.ros_distro}}","${{ inputs.ros_distro}}"
           GIT_TAG="${{ inputs.ros_distro}}-${VERSION_TAG}"
           echo "Image tags: ${IMAGE_TAGS}"
           echo "Git tag: ${GIT_TAG}"
